@@ -1,3 +1,3 @@
-[B][COLOR red]May 19, 2019[/COLOR][/B][COLOR yellow]--[/COLOR][I] Busy work week ahead so taking a bit of time off.
-   Hope to be back at it next week and would like to get back to UpNext
-   integration[/I]
+[B][COLOR red]May 19, 2019[/COLOR][/B][COLOR yellow]--[/COLOR][I] Busy work week ahead so taking a bit of time off.
+   Hope to be back at it next week and would like to get back to UpNext
+   integration[/I]
